--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,11 @@
     "incremental": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@components": ["./src/components/*"],
+      "@component-data": ["./src/component-data/*"],
+      "@assets": ["./src/assets/*"],
+      "@hooks": ["./src/hooks/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
