--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "animate.css": "^4.1.1",
+    "aos": "^2.3.4",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.2",
     "next": "13.1.2",
     "react": "18.2.0",
-    "react-animation-on-scroll": "^5.1.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.4"
   },
