--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "incremental": true,
     "baseUrl": ".",
     "paths": {
+      "@public/*": ["./public/*"],
       "@/*": ["./src/*"],
       "@components": ["./src/components/*"],
       "@component-data": ["./src/component-data/*"],
