--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
       "@component-data": ["./src/component-data/*"],
       "@assets": ["./src/assets/*"],
       "@hooks": ["./src/hooks/*"],
+      "@utils": ["./src/utils/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
